--- a/template/default/form/password.html
+++ b/template/default/form/password.html
@@ -1,9 +1,10 @@
 <div class="input-group password-input">
-    <input type="password" class="form-control" id="{{$id}}" name="{{$name}}" placeholder="{{$placeholder}}" value="{{$value}}" autocomplete="off">
+    <input type="password" class="form-control {{$class}}" id="{{$id}}" name="{{$name}}" placeholder="{{$placeholder}}" value="{{$value}}" autocomplete="off"
+           {{$disabled ? 'disabled="disabled"':''}} {{$readonly ? 'readonly="readonly"':''}}
+    >
     <span class="input-group-btn input-group-append">
           <button class="btn btn-primary password-controller" type="button">
               显示
           </button>
     </span>
 </div>
-<input type="hidden" name="build_form_type[{{$name}}]" value="password">
