--- a/template/default/form/end.html
+++ b/template/default/form/end.html
@@ -1,5 +1,5 @@
 {{if !empty($btn_footer)}}
-<div class="col-sm-12">
+<div class="col-md-12">
     <div class="form-group form-footer">
         <div class="col-sm-12 text-right">
             {{$btn_footer}}
