--- a/template/default/form/texts.html
+++ b/template/default/form/texts.html
@@ -1,35 +1,44 @@
 <div class="input-group form-json-group">
     <div class="form-json-group-demo">
         <div class="input-group form-json-item">
-            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control" disabled>
+            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control {{$class}}" disabled>
+            {{if !$disabled && !$readonly}}
             <span class="input-group-btn input-group-append">
                  <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
+            {{/if}}
         </div>
     </div>
     <div class="form-json-group-core">
         {{if count($value) <1 }}
         <div class="input-group form-json-item">
-            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control">
+            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control {{$class}}" value=""
+                   {{$disabled ? 'disabled="disabled"':''}} {{$readonly ? 'readonly="readonly"':''}}>
+            {{if !$disabled && !$readonly}}
             <span class="input-group-btn input-group-append">
                  <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
+            {{/if}}
         </div>
         {{else/}}
         {{foreach $value as $k=>$v}}
         <div class="input-group form-json-item">
-            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control" value="{{$v}}">
+            <input type="text" name="{{$name}}[]" placeholder="{{$placeholder|default=''}}" class="form-control {{$class}}" value="{{$v}}"
+                   {{$disabled ? 'disabled="disabled"':''}} {{$readonly ? 'readonly="readonly"':''}}>
+            {{if !$disabled && !$readonly}}
             <span class="input-group-btn input-group-append">
                  <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
+            {{/if}}
         </div>
         {{/foreach}}
         {{/if}}
     </div>
+    {{if !$disabled && !$readonly}}
     <span class="form-json-group-add">
          <button class="btn btn-primary form-json-add" type="button">
               追加
          </button>
     </span>
+    {{/if}}
 </div>
-<input type="hidden" name="build_form_type[{{$name}}]" value="texts">
