--- a/template/default/form/btn-submit.html
+++ b/template/default/form/btn-submit.html
@@ -1,3 +1,3 @@
-<button id="{{$id}}" type="{{$btn_type|default='submit'}}" class="btn btn-success">
+<button id="{{$id}}" type="{{$btn_type}}" class="btn btn-info">
     {{$btn_title|default='提交表单'|raw}}
 </button>
