--- a/template/default/form/end.html
+++ b/template/default/form/end.html
@@ -1,10 +1,6 @@
 {{if !empty($btn_footer)}}
-<div class="col-md-12">
-    <div class="form-group form-footer">
-        <div class="col-sm-12 text-right">
-            {{$btn_footer}}
-        </div>
-    </div>
+<div class="col-md-12 text-right form-footer">
+    {{$btn_footer}}
 </div>
 {{/if}}
 </div>
