--- a/template/default/form/tags.html
+++ b/template/default/form/tags.html
@@ -5,7 +5,7 @@
 return <<<EXO
 <script type='text/javascript'>
     $(document).ready(function () {
-            $('#$id.bootstrap-tagsinput-role').tagsinput({
+            $('#{$id}.bootstrap-tagsinput-role').tagsinput({
                 tagClass: function (item) {
                     return 'btn btn-info btn-sm';
                 }
