--- a/template/default/table/table-tool.html
+++ b/template/default/table/table-tool.html
@@ -1,3 +1,1 @@
-<div id="{{$tool_id}}" class="btn-group table-options">
-                {{$tool_btn|raw}}
-            </div>
+<div id="{{$tool_id}}" class="btn-group table-options">{{$tool_btn|raw}}</div>
