--- a/template/default/form/date-range.html
+++ b/template/default/form/date-range.html
@@ -2,7 +2,7 @@
        {{$disabled ? 'disabled="disabled"':''}} {{$readonly ? 'readonly="readonly"':''}}
 >
 {{:builder_event_listen($js_hook, function () use($form_id,$id,$value,$sTime,$eTime) {
-return <<<EXO
+return <<<HOOK
 <script type="text/javascript">
     var _startDate = "{$sTime}";
     var _endDateDate = "{$eTime}";
@@ -48,5 +48,5 @@ return <<<EXO
     }
     $('#{$form_id} #{$id}').daterangepicker(_dateRangepickerConfig);
 </script>
-EXO;
+HOOK;
 })}}
