--- a/template/default/form/file.html
+++ b/template/default/form/file.html
@@ -8,7 +8,7 @@
     </span>
 </div>
 {{:builder_event_listen($js_hook, function () use($img_ext,$id,$url) {
-return <<<EXO
+return <<<HOOK
 <script type="text/javascript">
     function selectFileWithCKFinder(elementId) {
         CKFinder.modal({
@@ -37,5 +37,5 @@ return <<<EXO
         });
     }
 </script>
-EXO;
+HOOK;
 })}}
