--- a/template/default/form/switch.html
+++ b/template/default/form/switch.html
@@ -2,7 +2,7 @@
 <input placeholder="{{$placeholder}}" type="checkbox" value="{{$on}}" name="{{$name}}" id="{{$id}}" class="{{$class}}"
        {{if $on == $value}}checked="checked"{{/if}} {{$disabled ? 'disabled="disabled"':''}} {{$readonly ? 'readonly="readonly"':''}}>
 {{:builder_event_listen($js_hook, function () use($form_id,$id) {
-return <<<EXO
+return <<<HOOK
 <script type='text/javascript'>
     $(document).ready(function () {
         $('#$id').bootstrapSwitch({
@@ -13,5 +13,5 @@ return <<<EXO
         });
     });
 </script>
-EXO;
+HOOK;
 })}}
