--- a/template/default/form/select-tree.html
+++ b/template/default/form/select-tree.html
@@ -12,7 +12,7 @@ return <<<HOOK
                 "keep_selected_style": false,
                 "tie_selection": true,
                 "whole_node": true,
-                "three_state": true
+                "three_state": false
             },
             "types": {
                 "default": {"icon": "fa fa-file icon-state-warning icon-lg"},
